--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@
   z-index: 800;
   pointer-events: none;
   background: transparent
-    url("http://assets.iceable.com/img/noise-transparent.png") repeat 0 0;
+    url("/background.png") repeat 0 0;
   background-repeat: repeat;
   opacity: 0.35;
   visibility: visible;
