--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
 .borderText {
   letter-spacing: 0.2rem;
   color: rgb(20 20 20);
-  text-shadow: 1px 0 0 #e8e8e8, -1px 0 0 #e8e8e8, 0 1px 0 #e8e8e8,
-    0 -1px 0 #e8e8e8, 1px 1px #e8e8e8, -1px -1px 0 #e8e8e8, 1px -1px 0 #e8e8e8,
-    -1px 1px 0 #e8e8e8;
+  text-shadow: 1px 0 0 #ffff, -1px 0 0 #ffff, 0 1px 0 #ffff,
+    0 -1px 0 #ffff, 1px 1px #ffff, -1px -1px 0 #ffff, 1px -1px 0 #ffff,
+    -1px 1px 0 #ffff;
 }
 .borderTextDark {
   letter-spacing: 0.2rem;
@@ -16,7 +16,7 @@
   -webkit-transition-duration: 1000ms;
 }
 .borderText:hover {
-  color: #e8e8e8;
+  color: #ffff;
   -webkit-transition-duration: 1000ms;
 }
 
@@ -33,7 +33,6 @@
   background: transparent
     url("/background.png") repeat 0 0;
   background-repeat: repeat;
-  opacity: 0.35;
   visibility: visible;
 }
 
@@ -59,31 +58,49 @@
     @apply m-0 p-0 box-border font-main2;
   }
   body {
-    @apply bg-gray-200 dark:bg-black1 min-h-screen overflow-x-hidden;
+    @apply bg-gray-200 dark:bg-black1 overflow-x-hidden;
   }
+  h1,
   h2,
   h3,
   h4,
   p,
-  a {
+  a,
+  label{
     @apply text-black dark:text-white;
   }
   h1 {
-    @apply text-2xl sm:text-4xl lg:text-6xl font-mainBold text-black dark:text-white;
+    @apply text-4xl lg:text-6xl font-mainBold;
   }
   h2 {
-    @apply text-lg md:text-xl text-black dark:text-white;
+    @apply text-2xl sm:text-4xl lg:text-5xl;
   }
-  body::-webkit-scrollbar {
+  h3{
+    @apply text-lg md:text-xl;
+  }
+  .textGradient{
+    @apply font-main gradient1 dark:gradient1;
+  }
+  ::-webkit-scrollbar {
     @apply w-[10px];
   }
-  body::-webkit-scrollbar-thumb {
-    @apply bg-gray-600 rounded-full;
+  ::-webkit-scrollbar-thumb {
+    @apply bg-gray3 dark:bg-gray4 rounded-full;
   }
   .gradient1 {
     @apply text-transparent bg-clip-text bg-gradient-to-r from-[#9D51E1] via-[#9B63A4] to-[#B86C7D];
   }
-  .border1 {
-    @apply bg-gray5 dark:bg-black2 border border-gray3 dark:border-gray1;
+  .box1 {
+    @apply rounded-md bg-gray5 dark:bg-black2 border border-gray3 dark:border-gray2;
+  }
+  input,
+  textarea{
+    @apply bg-transparent focus:outline-none dark:text-white text-black
+  }
+  textarea{
+    @apply resize-none 
+  }
+  .bg-opacity{
+    @apply opacity-50 dark:opacity-30
   }
 }
