--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@
     @apply m-0 p-0 box-border font-main2;
   }
   body {
-    @apply bg-gray-200 dark:bg-black1 overflow-x-hidden;
+    @apply bg-white1 dark:bg-black1 overflow-x-hidden;
   }
   h1,
   h2,
@@ -69,6 +69,9 @@
   h3 {
     @apply text-lg md:text-xl 2xl:text-2xl;
   }
+  h4{
+    @apply text-3xl lg:text-5xl 2xl:text-6xl font-mainBold
+  }
   .textGradient {
     @apply font-main gradient1 dark:gradient1;
   }
@@ -79,10 +82,13 @@
     @apply bg-gray3 dark:bg-gray4 rounded-full;
   }
   .globalMargins {
-    @apply mx-5 md:mx-10 xl:mx-20;
+    @apply px-5 md:px-10 xl:px-0;
+  }
+  .globalMarginsSlug {
+    @apply px-5 md:px-10 xl:px-20;
   }
   .globalSpacing {
-    @apply my-14 md:my-28;
+    @apply my-10 xl:my-20;
   }
   .gradient1 {
     @apply text-transparent bg-clip-text bg-gradient-to-r from-[#9D51E1] via-[#9B63A4] to-[#B86C7D];
